Fixes for FindBugs errors
Numerous repairs.

Tests: QL, deployment devtests


svn path=/trunk/; revision=46516


Former-commit-id: 245507dfd50959dd63b128d490a49e5e437fe73b